--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -15,7 +15,7 @@
   /* Aside/callout colors */
   --color-aside-border: #dddddd;
   --color-aside-tip-bg: #eaf8ff;
-  --color-aside-tip-text: #4e7182;
+  --color-aside-tip-text: #465e69;
   --color-aside-tip-border: #1eb4ff;
   --color-aside-warning-bg: #fdf5d8;
   --color-aside-warning-text: #716b53;
@@ -82,7 +82,7 @@
   --color-heading-dark: #32434a;
   --color-aside-border: #dddddd;
   --color-aside-tip-bg: #eaf8ff;
-  --color-aside-tip-text: #4e7182;
+  --color-aside-tip-text: #465e69;
   --color-aside-tip-border: #1eb4ff;
   --color-aside-warning-bg: #fdf5d8;
   --color-aside-warning-text: #716b53;
